<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ContratosActivity">

    <include layout="@layout/toolbar_order_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangle_gray_search"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_todos"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_green_search"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/todos"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_iniciado"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_gray_search"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/iniciado"
            android:textColor="@color/txt_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_cancelado"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_gray_search"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/cancelado"
            android:textColor="@color/txt_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_completo"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_gray_search"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/completo"
            android:textColor="@color/txt_black"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:id="@+id/recyclerView_contratos"
        android:paddingTop="15dp"
        android:clipToPadding="false"/>

</LinearLayout>