<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44.3dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/boas_vindas_login"
        android:textColor="@color/txt_black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/subtitulo_login"
        android:textColor="@color/smoke_gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="101.2dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/email_id"
        android:textColor="@color/light_black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:background="@color/transparent"
        android:drawableEnd="@drawable/ic_check_circle"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:hint="example@dominio.com"
        android:inputType="textCapWords"
        android:textColor="@color/txt_black"
        android:textColorHint="@color/subtxt_gray"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15.8dp"
        android:layout_marginRight="30dp"
        android:background="@color/smoke_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20.2dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/password"
        android:textColor="@color/light_black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="••••••••••••"
            android:inputType="textPassword"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/subtxt_gray"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/frame_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="7dp"
            android:paddingRight="30dp"
            android:paddingBottom="9dp">

            <ImageView
                android:id="@+id/img_eye1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye_vision"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_eye2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye_invision" />

        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="6dp"
        android:background="@color/smoke_gray" />

    <TextView
        android:id="@+id/textView_forgotSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="23.3dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/txt_black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30.2dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle_green"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_semConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/txt_sign_in"
        android:textAlignment="center"
        android:textSize="14sp" />
</LinearLayout>