<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:contentInsetStart="0dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.3dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/txt_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configurações"
            android:textSize="18sp"
            android:layout_marginLeft="17.3dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textColor="@color/txt_black"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11.6dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.7dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="22dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/smoke_gray"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:rotation="180"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_back"
                    android:tint="#c2c4ca" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="17dp"
                android:background="@color/smoke_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.7dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="22dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/smoke_gray"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:rotation="180"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_back"
                    android:tint="#c2c4ca" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="17dp"
                android:background="@color/smoke_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.7dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="22dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/about_us"
                    android:textColor="@color/smoke_gray"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:rotation="180"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_back"
                    android:tint="#c2c4ca" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="17dp"
                android:background="@color/smoke_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.7dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="22dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/support"
                    android:textColor="@color/smoke_gray"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="20dp"
                    android:rotation="180"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_back"
                    android:tint="#c2c4ca" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="17dp"
                android:background="@color/smoke_gray" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Versão 1.15.0"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>
</LinearLayout>